# alife

./: Makefile  READ.md  README.md  sandpile  sandpile.cpp  sugarspace  sugarspace.cpp  triangle  triangle.cpp
AffineTransform/: affineTransform  affineTransform.cpp
Boids Source Code/: Advanced Boids.sln
Boids Source Code/Advanced Boids/: Advanced Boids.vcxproj  Advanced Boids.vcxproj.filters  Boid.cpp  Boid.h  BoidCB.cpp  BoidCB.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  PlayerCB.cpp  PlayerCB.h  Predator.cpp  Predator.h  PredatorCB.cpp  PredatorCB.h  UserInput.cpp  UserInput.h  generalIncludes.h  (+3 more)
FractalDim/: fractalDim  fractalDim.cpp
LSystems/: lsystems  lsystems.cpp  lsystems.in
LangtonLoop/: qlangton  qlangton.cpp
build-photoviewer-Desktop_Qt_5_10_1_GCC_64bit-Debug/: qrc_qml.cpp
l-systems/: OpenGLExample  lsystems.cpp  lsystems2.cpp
photoviewer/: main.cpp
project/: CMakeLists.txt  Figure.cpp  Figure.h  Flock.cpp  Flock.h  LSystem.cpp  LSystem.h  Makefile  Turtle.cpp  Turtle.h  Vector2d.cpp  Vector2d.h  main  main.cpp  oglhelpers.cpp  oglhelpers.h
project/Base/: Turtle.cpp  Turtle.h  Vector2d.cpp  Vector2d.h
project/Flocking/: Boid.cpp  Boid.h
project/LSystems/: LSystem.cpp  LSystem.h
project/PredatorPrey/: Predator.cpp  Predator.h  PredatorPrey.cpp  PredatorPrey.h
project/Sugarscape/: Sandpile.cpp  Sandpile.h  Sugarscape.cpp  Sugarscape.h
project/helpers/: helpers.h  oglhelpers.cpp  oglhelpers.h
resources/: tut.cpp
src/: Makefile  main.cpp
turing/: Makefile  alpha  alphamat  alphamat.cpp  turing  turing.cpp  turing.py
(+26 files in other folders)
